force-app/main/default/objects/Purchase_Order__c/Purchase_Order__c.object-meta.xml
<CustomObject>
    <label>Orden de Compra</label>
    <nameField>
        <displayFormat>OC-{00000}</displayFormat>
        <label>Código</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ordenes de Compra</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>