force-app/main/default/objects/Purchase_Order__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ordenes de Compra</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>