force-app/main/default/objects/Purchase_Order__c/fields/Authorization_Contact__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Autorizado por</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Ordenes de Compra Autorizadas</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>