force-app/main/default/objects/Purchase_Order__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contacto</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Ordenes de Compra</relationshipLabel>
    <relationshipName>Purchase_Orders_2</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>