force-app/main/default/objects/Purchase_Order__c/fields/Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Currency_Code__c</fullName>
    <formula>TEXT(Quote__r.Currency_Code__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Moneda</label>
    <type>Text</type>
</CustomField>