force-app/main/default/objects/Purchase_Order__c/fields/Dispatch_Status__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Status__c</fullName>
    <label>Estado de Despacho</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente</fullName>
                <default>true</default>
                <label>Pendiente</label>
            </value>
            <value>
                <fullName>Parcialmente</fullName>
            </value>
            <value>
                <fullName>Completado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>