force-app/main/default/objects/Purchase_Order__c/fields/Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Order_Id__c</fullName>
    <description>Id del cliente para la orden de compra</description>
    <label>No. de Orden</label>
    <length>255</length>
    <type>Text</type>
</CustomField>