force-app/main/default/objects/Purchase_Order__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Cotización</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>Ordenes de Compra</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>