force-app/main/default/objects/Purchase_Order__c/validationRules/Prevent_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Update</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
            AND(ISCHANGED( Quote__c ), NOT(ISBLANK( Id ))),
            AND(ISCHANGED( Account__c ), NOT(ISBLANK( Id ))),
            AND(ISCHANGED( Contact__c ), NOT(ISBLANK( Id ))),
            AND(ISCHANGED( Authorization_Contact__c ), NOT(ISBLANK( Id )))
        )</errorConditionFormula>
    <errorMessage>El campo no puede ser modificado.</errorMessage>
</ValidationRule>